infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      serviceAccountName: ksa-cloud-sql
      containers:
        - name: auth
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              memory: 384Mi
              cpu: 300m
          image: europe-west1-docker.pkg.dev/ms-commerce-auto-1/ms-commerce/auth
        - name: cloud-sql-proxy
          # This uses the latest version of the Cloud SQL proxy
          # It is recommended to use a specific version for production environments.
          # See: https://github.com/GoogleCloudPlatform/cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:latest
          command:
            - '/cloud_sql_proxy'

            # If connecting from a VPC-native GKE cluster, you can use the
            # following flag to have the proxy connect over private IP
            # - "-ip_address_types=PRIVATE"

            # tcp should be set to the port the proxy should listen on
            # and should match the DB_PORT value set above.
            # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
            - '-instances=ms-commerce-auto-1:europe-west1:ms-commerce-auth=tcp:5432'
          securityContext:
            # The default Cloud SQL proxy image runs as the
            # "nonroot" user and group (uid: 65532) by default.
            runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
