infra/k8s/cart-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-depl # name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: pubsub-key
      containers:
        - name: cart
          image: yahiaeltai/cart
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
---
apiVersion: v1
kind: Service
metadata:
  name: cart-srv
spec:
  selector:
    app: cart
  ports:
    - name: cart
      protocol: TCP
      port: 3001
      targetPort: 3001
