infra/k8s/cart-mongo-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cart-mongo-depl
spec:
  serviceName: cart-mongo-srv
  replicas: 1
  selector:
    matchLabels:
      app: cart-mongo
  template:
    metadata:
      labels:
        app: cart-mongo
    spec:
      containers:
        - name: cart-mongo
          image: mongo
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              memory: 384Mi
              cpu: 300m
          volumeMounts:
            - mountPath: /data/db
              name: cart-mongo-volume-storage
      volumes:
        - name: cart-mongo-volume-storage
          persistentVolumeClaim:
            claimName: cart-mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cart-mongo-srv
spec:
  selector:
    app: cart-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
