infra/k8s/ms-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-auth
  template:
    metadata:
      labels:
        app: ms-auth
    spec:
      containers:
        - name: ms-auth
          image: yahiaeltai/ms-auth
---
apiVersion: v1
kind: Service
metadata:
  name: ms-auth-srv
spec:
  selector:
    app: ms-auth
  ports:
    - name: ms-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
